package vehiculos;

public interface Asegurable {
    String calcularRiesgo();
}
