package vehiculos;

public interface Imprimible {
    String imprimirDatosVehiculo();
}
