package vehiculos;

public interface Valorable {
    double calcularDepreciacion();
}
