package vehiculos.coche;

public enum NivelConfort {
    BASICO,
    MEDIO,
    PREMIUM
}
