package vehiculos.coche;

public enum Traccion {
    DELANTERA,
    TRASERA,
    T4X4
}
