package vehiculos.moto;

public enum TipoTransmision {
    MANUAL,
    AUTOMATICA
}
